--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   pdf: ^3.6.0
 
 
-
+  flash: ^2.0.3
+ 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.7+1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
