--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.7+1
   provider: ^6.0.5
+  firebase_core: ^2.11.0
+  firebase_auth: ^4.5.0
+  cloud_firestore: ^4.6.0
 
 dev_dependencies:
   flutter_test:
