--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
 
    #To add assets to your application, add an assets section, like this:
   assets:
+     - /home/mohamed/Bureau/sos_restau-master/lib/Categories/hygiene.dart
      - assets/images/meat.jpg
      - assets/images/drinks.jpg
      - assets/images/dairy.jpg
