--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,5 +68,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.android.material:material:<version>'
+
 }
-id 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
