--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.18.1
   firebase_storage: ^11.2.0
   webview_flutter: ^4.2.0
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
