--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_storage: ^11.2.0
   webview_flutter: ^4.2.0
   url_launcher: ^6.1.11
+  flutter_pdfview: ^1.3.1
 
 dev_dependencies:
   flutter_test:
